--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,7 @@
         <button type="submit">Search</button>
       </form>
     </header>
-    <div class="gallery">
-      <!-- Картки зображень -->
-    </div>
+    <div class="gallery"></div>
     <button data-action="load-more" type="button" class="btn visually-hidden">
       Load more
     </button>
