--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,10 @@
         <button type="submit">Search</button>
       </form>
     </header>
-    <div class="gallery"></div>
-    <button data-action="load-more" type="button" class="btn visually-hidden">
-      Load more
+    <div class="gallery" name="gallery"></div>
+    <button data-action="load-more" type="btn btn-primary button" class="btn">
+      <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
+      <span class="label">Load more</span>
     </button>
 
     <script src="indexs.js" type="module"></script>
