--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       href="/node_modules/simplelightbox/dist/simple-lightbox.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <header class="header">
