--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,6 @@
       <span class="label">Load more</span>
     </button>
 
-    <script src="indexs.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
